# chesseyy

./: .gitignore  CD_Competitive Programming Lab final 22-12-25.docx  CMakeLists.txt  README.md  VIVA_GUIDE.md  report.tex
src/: board.cpp  board.h  engine.cpp  engine.h  main.cpp  main_backup.cpp  moves.cpp  moves.h
